Update install instructions and database structure

--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,13 @@
-1. Check out code
+Enviroment:
+* apache2 mod_rewrite php5(?)
+* lighttpd should be ok but you have to set up rewrite rule yourself.
+
+Install:
+1. Check out code from svn
 2. Config base path at system/application/config/config.php and .htaccess
 3. Config db at system/application/config/database.php
-4. Create database and tables by import gfx.sql.gz
-5. INSERT INTO `users` SET `name` = 'foxmosa', `id` = 1;
-6. sudo chown www-data:www-data useravatars system/cache (or chmod 777 if you cannot sudo)
+4. Create database and tables and inital data with importing gfx.sql
+5. sudo chown www-data:www-data useravatars system/cache (or chmod 777 if you cannot sudo)
 
 On Production Site:
 1. Change $route['scaffolding_trigger']  to empty string in system/application/config/routes.php
